<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Clementine</string>
  <string name="edit_message">Enter a message</string>
  <string name="button_send">Send</string>
  <string name="menu_settings">Settings</string>
  <string name="title_activity_main">MainActivity</string>
  <string name="title_activity_display_message">My message</string>
  <string name="label_play">Play</string>
  <string name="label_pause">Pause</string>
  <string name="label_stop">Stop</string>
  <string name="label_next">Next</string>
  <string name="label_previous">Previous</string>
  <string name="label_buffering">Buffering...</string>
  <string name="edit_playlist">Edit Playlist</string>
  <string name="clear_playlist">Clear Playlist</string>
  <string name="authenticate">Authenticate</string>
</resources>
